# rover

./: .gitignore  README.md  comm.py  crc.cpp  realsense_test.py  start_rover.txt
.devcontainer/: Dockerfile  devcontainer.json
Arduino/c___controller/: c___controller.ino
Arduino/esc-pwm-control/: esc-pwm-control.ino
Arduino/rover-arduino-serial-and-pwm/: rover-arduino-serial-and-pwm.ino
drive_train/: package.xml  setup.cfg  setup.py
drive_train/drive_train/: comm.py  controller_node copy.py  controller_node.py  driver_node.py  new_controller_node.py  new_driver_node.py  serial_send  serial_send.cpp
drive_train/launch/: drivetrain.launch.py  readme.txt
drive_train/urdf/: basic_rover.urdf
i2c-control-pkg/: CMakeLists.txt  package.xml
i2c-control-pkg/src/: i2c-node.cpp
install/: local_setup.sh  setup.sh
launch/: host.launch.py  readme.md  rover.launch.py  start
log/: latest_build
motor_control_pkg/: CMakeLists.txt  package.xml
motor_control_pkg/src/: motor_control_node.cpp
rover_description/description/: gazebo.xacro  joints.xacro  links.xacro  rover.xacro  transmissions.xacro
rover_description/launch/: controller.launch  controller.yaml  gazebo.launch
rover_description/urdf/: rover.gazebo  rover.trans  rover.xacro
rover_interfaces/: CMakeLists.txt  package.xml
rover_pkg/: CMakeLists.txt  package.xml
rover_pkg/src/: driver_node_v2.cpp  serial_comms_node.cpp
src/arm/: setup.py
src/commstest/: package.xml  setup.cfg  setup.py
src/drivetrain/: package.xml  setup.py
src/interfaces/: package.xml
src/launch/: host.launch.py  (+1 more)
(+45 files in other folders)
